objects/Team_SLA__c.object
<CustomObject>
    <fields>
        <fullName>Case_Types__c</fullName>
        <label>Case Types</label>
        <picklist>
            <picklistValues>
                <fullName>Account Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active/Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unassigned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Level_Agreement__c</fullName>
        <label>Service Level Agreement</label>
        <referenceTo>Service_Level_Agreement__c</referenceTo>
        <relationshipLabel>Team SLAs</relationshipLabel>
        <relationshipName>Team_SLAs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Team SLAs</relationshipLabel>
        <relationshipName>Team_SLAs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Team SLA</label>
    <nameField>
        <label>Team SLA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team SLAs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>